--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -38,33 +38,26 @@
             </div>
         </section>
         <section class="section2" id="section2">
+        
         <div class="entryHolder">
-            
-                          
-                <!-- item-3 -->
                 <div class = "design-item">
                     
-                    <figure> 
-                        <div class = "design-img">                                   
-                           <img class="image1">                            
-                        </div>                                                           
+                    <figure class = "design-img" id="image1"> 
+                                          
                     </figure>
                        
                     <div class = "design-title">  
                         <div class="title">                                
-                            <lable class="city1"></lable><lable class="state"></lable><lable class="country"></lable>                        
+                            <p class="city1"></p><p class="state"></p><p class="country"></p>                        
                         </div>
                         <p class="startdate"></p>
                         <p class="returnDate"></p>
-                        <h3 class="temp"></h3>
+                        <p class="temp"></p>
                         <p class="noOfDays"></p>
                         <p class="daysLeft"></p>
                         
-                        <figure  class = "design-img"> 
-                                                           
-                                <img  class="icon"> 
-                                <figcaption class="desc"></figcaption>                               
-                                                                                      
+                        <figure  class = "design-img" id="icon"> 
+                                                                           
                         </figure>
                     </div>
                      
